Get catcher alocated to subscriber by uid
